derive/test/compile_fail/newtype_label.rs
use sval_derive::*;

#[derive(Value)]
pub struct Newtype(#[sval(label = "value")] i32);

fn main() {

}