derive/test/compile_fail/newtype_label.stderr
error: unsupported attribute `label` on newtype field
 --> compile_fail/newtype_label.rs:4:27
  |
4 | pub struct Newtype(#[sval(label = "value")] i32);
  |                           ^^^^^
